// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/react/react-router-plugin React Router should create nodes by default 1`] = `
[
  [
    "acme/react-router.config.js",
    {
      "projects": {
        "acme": {
          "metadata": {},
          "projectType": "application",
          "root": "acme",
          "targets": {
            "build": {
              "cache": true,
              "command": "react-router build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@react-router/dev",
                  ],
                },
              ],
              "options": {
                "cwd": "acme",
              },
              "outputs": [
                "{workspaceRoot}/acme/build/client",
                "{workspaceRoot}/acme/build/server",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "react-router dev",
              "options": {
                "cwd": "acme",
              },
            },
            "start": {
              "command": "react-router-serve build/server/index.js",
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "acme",
              },
            },
            "typecheck": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": "acme",
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects acme --includeDependentProjects -- npx nx build-deps acme",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/react/react-router-plugin React Router should create nodes without start target if ssr is false 1`] = `
[
  [
    "acme/react-router.config.js",
    {
      "projects": {
        "acme": {
          "metadata": {},
          "projectType": "library",
          "root": "acme",
          "targets": {
            "build": {
              "cache": true,
              "command": "react-router build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@react-router/dev",
                  ],
                },
              ],
              "options": {
                "cwd": "acme",
              },
              "outputs": [
                "{workspaceRoot}/acme/build/client",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "react-router dev",
              "options": {
                "cwd": "acme",
              },
            },
            "typecheck": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": "acme",
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects acme --includeDependentProjects -- npx nx build-deps acme",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;
